remove "demo" in description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     <div class="container">
         <h1>Welcome to CICDemo</h1>
-        <h2>Continuous Integration and Continuous Deployment Demo</h2>
+        <h2>Continuous Integration and Continuous Deployment</h2>
     </div>
 </body>
 </html>
